--- a/ColeccionDeJuegos/Base.lproj/Main.storyboard
+++ b/ColeccionDeJuegos/Base.lproj/Main.storyboard
@@ -36,7 +36,7 @@
                     <navigationItem key="navigationItem" id="fM8-fi-crj">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="f44-Mr-Tev">
                             <connections>
-                                <segue destination="oBx-qq-II0" kind="show" id="Cc2-iI-1Nr"/>
+                                <segue destination="oBx-qq-II0" kind="show" identifier="se" id="Cc2-iI-1Nr"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -73,6 +73,13 @@
                                     <action selector="agregarTapped:" destination="oBx-qq-II0" eventType="touchUpInside" id="9Dk-Ht-7HK"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8ld-mz-4c6">
+                                <rect key="frame" x="160" y="357" width="55" height="30"/>
+                                <state key="normal" title="Eliminar"/>
+                                <connections>
+                                    <action selector="eliminarTapped:" destination="oBx-qq-II0" eventType="touchUpInside" id="ZLv-OP-3w7"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -81,6 +88,8 @@
                             <constraint firstItem="Dzh-Gb-EOm" firstAttribute="centerX" secondItem="XRb-L7-TLA" secondAttribute="centerX" id="9QX-8y-8aD"/>
                             <constraint firstItem="6JY-df-CCN" firstAttribute="top" secondItem="uW5-gA-OpL" secondAttribute="bottom" constant="20" id="Dep-QU-hOJ"/>
                             <constraint firstItem="6JY-df-CCN" firstAttribute="centerX" secondItem="XRb-L7-TLA" secondAttribute="centerX" id="EZs-tm-pqn"/>
+                            <constraint firstItem="8ld-mz-4c6" firstAttribute="top" secondItem="6JY-df-CCN" secondAttribute="bottom" constant="15" id="HaJ-19-QZz"/>
+                            <constraint firstItem="8ld-mz-4c6" firstAttribute="centerX" secondItem="XRb-L7-TLA" secondAttribute="centerX" id="HcY-DT-0bc"/>
                             <constraint firstItem="uW5-gA-OpL" firstAttribute="centerX" secondItem="XRb-L7-TLA" secondAttribute="centerX" id="KQg-KL-pGo"/>
                             <constraint firstItem="zAa-3o-kXr" firstAttribute="bottom" secondItem="Dzh-Gb-EOm" secondAttribute="bottom" constant="381" id="OAq-5H-LU6"/>
                             <constraint firstItem="uW5-gA-OpL" firstAttribute="top" secondItem="Dzh-Gb-EOm" secondAttribute="bottom" constant="20" id="SOm-b9-HTc"/>
@@ -104,6 +113,8 @@
                         </rightBarButtonItems>
                     </navigationItem>
                     <connections>
+                        <outlet property="agregarActualizarBoton" destination="6JY-df-CCN" id="leO-dD-aMK"/>
+                        <outlet property="eliminarBoton" destination="8ld-mz-4c6" id="kY3-3g-aIM"/>
                         <outlet property="s" destination="Dzh-Gb-EOm" id="IdX-NL-o7r"/>
                         <outlet property="tituloTextField" destination="uW5-gA-OpL" id="KZR-RO-Jpq"/>
                     </connections>
